--- a/header.html
+++ b/header.html
@@ -16,9 +16,9 @@
 	<header class="header">
 		<div class="header-left">
 			<div class="header__logo">
-				<a href="index.html"><img src="images/common/logo-new.svg" alt="펭귄서프클럽 로고"></a>
+				<a href="index.html" title="메인으로"><img src="images/common/logo-new.svg" alt="펭귄서프클럽 로고"></a>
 			</div>
-			<div class="header__brand"><a href="index.html">PENGUINN<br>SURF CLUB</a></div>
+			<div class="header__brand"><a href="index.html" title="메인으로">PENGUINN<br>SURF CLUB</a></div>
 		</div>
 		<div class="header-right">
 			<div class="header__weather">
@@ -73,12 +73,13 @@
 				</div>
 			</div>
 			<div class="header__nav">
-				<div class="nav-tab"><a href="location.html">위치</a></div>
-				<div class="nav-tab"><a href="location.html">수업</a></div>
-				<div class="nav-tab"><a href="location.html">대여</a></div>
+				<a href="location.html" title="위치" class="nav-tab"><p>위치</p></a>
+				<a href="class.html" title="수업" class="nav-tab"><p>수업</p></a>
+				<a href="rent.html" title="대여" class="nav-tab"><p>대여</p></a>
 			</div>
 		</div>
 	</header>
+	<div class="mobile-menu"></div>
 </body>
 	<script type="text/javascript" src="javascripts/common.js"></script>
 </html>
