--- a/rent.html
+++ b/rent.html
@@ -15,5 +15,228 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
+	<header class="header">
+		<div class="header-left">
+			<div class="header__logo">
+				<a href="index.html" title="메인으로"><img src="images/common/logo-new.svg" alt="펭귄서프클럽 로고"></a>
+			</div>
+			<div class="header__brand"><a href="index.html" title="메인으로">PENGUINN<br>SURF CLUB</a></div>
+		</div>
+		<div class="header-right">
+			<div class="header__weather-wrapper">
+				<div class="header-weather">
+					<div class="weather current">
+						<div class="weather-bg">
+							<img src="images/common/weather-bg-01.png" alt="오전 날씨">
+						</div>
+						<div class="weather-content">
+							<div class="weather-content__time">오전</div>
+							<div class="weather-content__info">
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-clowdy.svg" alt="조금흐림">
+									</div>
+									<div class="info-tab__text">35℃</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-wave.svg" alt="파고">
+									</div>
+									<div class="info-tab__text">3.5m</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-surfing-man.svg" alt="서핑최적도">
+									</div>
+									<div class="info-tab__text">BEST</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="weather">
+						<div class="weather-bg">
+							<img src="images/common/weather-bg-02.png" alt="오후 날씨">
+						</div>
+						<div class="weather-content">
+							<div class="weather-content__time">오전</div>
+							<div class="weather-content__info">
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-sunny.svg" alt="맑음">
+									</div>
+									<div class="info-tab__text">25℃</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-wave.svg" alt="파고">
+									</div>
+									<div class="info-tab__text">2.8m</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-surfing-man.svg" alt="서핑최적도">
+									</div>
+									<div class="info-tab__text">GOOD</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="weather">
+						<div class="weather-bg">
+							<img src="images/common/weather-bg-03.png" alt="내일 날씨">
+						</div>
+						<div class="weather-content">
+							<div class="weather-content__time">내일</div>
+							<div class="weather-content__info">
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-rainy.svg" alt="비">
+									</div>
+									<div class="info-tab__text">24℃</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-wave.svg" alt="파고">
+									</div>
+									<div class="info-tab__text">3.7m</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-surfing-man.svg" alt="서핑최적도">
+									</div>
+									<div class="info-tab__text">NOPE</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="header-waether-dir">
+					<div class="dir-up">
+						<img src="images/common/arrow-white.svg" alt="이동">
+					</div>
+					<div class="dir-down">
+						<img src="images/common/arrow-white.svg" alt="이동">
+					</div>
+				</div>
+			</div>
+			<div class="header__nav">
+				<a href="location.html" class="nav-tab"><p>위치</p></a>
+				<a href="class.html" class="nav-tab"><p>수업</p></a>
+				<a href="rent.html" class="nav-tab"><p>대여</p></a>
+			</div>
+		</div>
+	</header>
+	<div class="mobile-menu"></div>
+	<section class="rent">
+		<div class="rent-bg">
+			<img src="images/index/surf-06.jpg" alt="서핑보드 대여">
+		</div>
+		<div class="rent-filter"></div>
+		<div class="rent-content">
+			<div class="rent-content__header">
+				<div class="header-subtitle">이중에 내 취향 하나 있지 않겠어??</div>
+				<h1 class="header-title">펭귄서프클럽에서 개인맞춤 서핑보드를 빌려드립니다</h1>
+				<div class="header-desc">펭귄서프클럽은 약 100여개의 디자인이 각각 다른 서핑보드를 보유하고 있습니다. 또한 전문가가 개인의 체형에 맞는 맞춤형보드를 추천해드리고 있습니다.</div>
+			</div>
+			<div class="rent-button">
+				<button class="rent-button__more">
+					<p>서핑보드 대여신청</p>
+						<span>
+							<img src="images/common/arrow-white.svg" alt="이동">
+						</span>
+				</button>
+			</div>
+		</div>
+	</section>
+	<section class="rent-fee">
+		<div class="rent-fee__text">
+			<div class="fee-text__subtitle">이 가격에 이 퀄리티?!</div>
+			<h1 class="fee-text__title">서핑보드 요금제</h1>
+			<div class="fee-text__desc">기본적인 대여 시스템은 1시간 단위이며 올데이 패스를 끊으시면 30,000원의 가격에 하루종일 이용하실 수 있습니다. 사용시간은 아침 8시~ 저녁 7시까지며 하절기는 8시까지 대여가 가능합니다.</div>
+		</div>
+		<div class="rent-fee__card">
+			<div class="card-bg">
+				<img src="images/index/lesson-bg.jpg" alt="시간당 대여">
+			</div>
+			<div class="card-filter"></div>
+			<div class="card-content">
+				<div class="card-title">시간당 대여</div>
+				<div class="card-subtitle">원하는 시간만큼</div>
+				<div class="card-desc">3시간 이하 사용자분들께 추천드리는 요금제입니다.</div>
+				<div class="card-price">&#8361;8,000 / 1hr</div>
+			</div>
+		</div>
+		<div class="rent-fee__card">
+			<div class="card-bg">
+				<img src="images/rent/surf-21.jpg" alt="올데이 대여">
+			</div>
+			<div class="card-filter orange"></div>
+			<div class="card-content">
+				<div class="card-title">ALL DAY 패스</div>
+				<div class="card-subtitle">아침 8시 ~ 저녁 7시까지</div>
+				<div class="card-desc">하루종일 바다를 떠나고 싶지 않은 분들꼐 추천드리는 요금제입니다.</div>
+				<div class="card-price">&#8361;30,000</div>
+			</div>
+		</div>
+	</section>
+	<section class="ad">
+		<div class="ad-tab">
+			<div class="ad-tab__img">
+				<img src="images/index/snap-02.jpg" alt="다녀간 사람들 후기">
+			</div>
+			<div class="ad-tab__filter red"></div>
+			<div class="ad-tab__text">
+				<p class="text-title">다녀간 사람들의 생생한 후기</p>
+				<span>
+					<img src="images/common/arrow-white.svg" alt="이동">
+				</span>
+			</div>
+		</div>
+		<div class="ad-tab">
+			<div class="ad-tab__img">
+				<img src="images/index/slide-02.jpg" alt="펭귄서프클럽 위치">
+			</div>
+			<div class="ad-tab__filter"></div>
+			<div class="ad-tab__text">
+				<p class="text-title">찾기 편리한 자리에 위치</p>
+				<span>
+					<img src="images/common/arrow-white.svg" alt="이동">
+				</span>
+			</div>
+		</div>
+		<div class="ad-tab">
+			<div class="ad-tab__img">
+				<img src="images/index/surf-15.jpg" alt="맞춤형클래스">
+			</div>
+			<div class="ad-tab__filter green"></div>
+			<div class="ad-tab__text">
+				<p class="text-title">재방문 하고 싶어지는 서핑 클래스</p>
+				<span>
+					<img src="images/common/arrow-white.svg" alt="이동">
+				</span>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="footer-logo">
+			<img src="images/common/logo-full-white.svg" alt="펭귄서프클럽">
+		</div>
+		<div class="footer-sns">
+			<div class="sns-tab">
+				<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
+				<div class="sns-tab__tooltip">팔로우</div>
+			</div>
+			<div class="sns-tab">
+				<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
+				<div class="sns-tab__tooltip">페이지</div>
+			</div>
+			<div class="sns-tab">
+				<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
+				<div class="sns-tab__tooltip">소식보기</div>
+			</div>
+		</div>
+		<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
+	</footer>
 </body>
+<script type="text/javascript" src="javascripts/common.js"></script>
 </html>
