--- a/class.html
+++ b/class.html
@@ -23,61 +23,106 @@
 			<div class="header__brand"><a href="index.html" title="메인으로">PENGUINN<br>SURF CLUB</a></div>
 		</div>
 		<div class="header-right">
-			<div class="header__weather">
-				<div class="waether-tab">
-					<div class="waether-tab__name">지역</div>
-					<div class="waether-tab__content">
-						<p class="content-location">속초</p>
-					</div>
-				</div>
-				<div class="waether-tab">
-					<div class="waether-tab__name">날씨</div>
-					<div class="waether-tab__content">
-						<div class="content-icon">
-							<img src="images/common/weather-icon-clowdy.svg" alt="조금 흐림">
+			<div class="header__weather-wrapper">
+				<div class="header-weather">
+					<div class="weather current">
+						<div class="weather-bg">
+							<img src="images/common/weather-bg-01.png" alt="오전 날씨">
 						</div>
-						<div class="content-text">
-							<p class="content-text__max">25<span>℃</span></p>
-							<p class="content-text__min">19<span>℃</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="waether-tab">
-					<div class="waether-tab__name">파고</div>
-					<div class="waether-tab__content">
-						<div class="content-icon">
-							<img src="images/common/weather-icon-wave.svg" alt="파고높이">
-						</div>
-						<div class="content-text">
-							<p class="content-text__max">3.5<span>m</span></p>
-							<p class="content-text__min">1.5<span>m</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="waether-tab">
-					<div class="waether-tab__name">서핑</div>
-					<div class="waether-tab__content">
-						<div class="content-icon">
-							<img src="images/common/weather-icon-surfing-man.svg" alt="서핑기준">
-						</div>
-						<div class="content-text">
-							<p class="content-text__surf">BEST</p>
+						<div class="weather-content">
+							<div class="weather-content__time">오전</div>
+							<div class="weather-content__info">
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-clowdy.svg" alt="조금흐림">
+									</div>
+									<div class="info-tab__text">35℃</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-wave.svg" alt="파고">
+									</div>
+									<div class="info-tab__text">3.5m</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-surfing-man.svg" alt="서핑최적도">
+									</div>
+									<div class="info-tab__text">BEST</div>
+								</div>
+							</div>
 						</div>
 					</div>
+					<div class="weather">
+						<div class="weather-bg">
+							<img src="images/common/weather-bg-02.png" alt="오후 날씨">
+						</div>
+						<div class="weather-content">
+							<div class="weather-content__time">오전</div>
+							<div class="weather-content__info">
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-sunny.svg" alt="맑음">
+									</div>
+									<div class="info-tab__text">25℃</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-wave.svg" alt="파고">
+									</div>
+									<div class="info-tab__text">2.8m</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-surfing-man.svg" alt="서핑최적도">
+									</div>
+									<div class="info-tab__text">GOOD</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="weather">
+						<div class="weather-bg">
+							<img src="images/common/weather-bg-03.png" alt="내일 날씨">
+						</div>
+						<div class="weather-content">
+							<div class="weather-content__time">내일</div>
+							<div class="weather-content__info">
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-rainy.svg" alt="비">
+									</div>
+									<div class="info-tab__text">24℃</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-wave.svg" alt="파고">
+									</div>
+									<div class="info-tab__text">3.7m</div>
+								</div>
+								<div class="info-tab">
+									<div class="info-tab__icon">
+										<img src="images/common/weather-icon-surfing-man.svg" alt="서핑최적도">
+									</div>
+									<div class="info-tab__text">NOPE</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="waether-dir">
+				<div class="header-waether-dir">
 					<div class="dir-up">
-						<img src="images/common/triangle-arrow.svg" alt="위로">
+						<img src="images/common/arrow-white.svg" alt="이동">
 					</div>
 					<div class="dir-down">
-						<img src="images/common/triangle-arrow.svg" alt="아래로">
+						<img src="images/common/arrow-white.svg" alt="이동">
 					</div>
 				</div>
 			</div>
 			<div class="header__nav">
-				<a href="location.html" title="위치" class="nav-tab"><p>위치</p></a>
-				<a href="class.html" title="수업" class="nav-tab"><p>수업</p></a>
-				<a href="rent.html" title="대여" class="nav-tab"><p>대여</p></a>
+				<a href="location.html" class="nav-tab"><p>위치</p></a>
+				<a href="class.html" class="nav-tab"><p>수업</p></a>
+				<a href="rent.html" class="nav-tab"><p>대여</p></a>
 			</div>
 		</div>
 	</header>
