--- a/index.html
+++ b/index.html
@@ -102,6 +102,63 @@
 			</div>
 		</div>
 	</section>
+	<section class="container">
+		<div class="container-content">
+			<div class="location-wrapper">
+				<div class="location-intro left">
+					<div class="intro-image">
+						<img src="images/index/section2-way.jpg" alt="오시는 길" />
+					</div>
+					<a href="location.html" class="intro-tab"><img src="images/common/dir-dark.svg" alt="이동"><span>오시는 길</span></a>
+				</div>
+				<div class="location-intro right">
+					<div class="intro-image">
+						<img src="images/index/section2-look.jpg" alt="둘러보기" />
+					</div>
+					<a href="location.html" class="intro-tab"><span>둘러보기</span><img src="images/common/dir-dark.svg" alt="이동"></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="container">
+		<div class="container-content">
+			<div class="gallery-wrapper">
+				<p class="gallery-title">IT'S SUMMER</p>
+				<a href="location.html" class="gallery-btn">사진 갤러리</a>
+			</div>
+		</div>
+	</section>
+	<section class="container">
+		<div class="container-title">
+			<span class="title-line"></span>
+			<p class="title">대여도 가능합니다</p>
+		</div>
+		<div class="container-content">
+			<div class="rental-wrapper">
+				<div class="rental-slide">
+					<img src="images/index/rental-01.jpg" alt="서핑보드 대여 슬라이드" />
+				</div>
+				<ul class="rental-slide-nav">
+					<li class="slide-nav__tab">
+						<img src="images/common/icon-surfboard-white.svg" alt="서핑보드">
+						<span>서핑보드</span>
+					</li>
+					<li class="slide-nav__tab">
+						<img src="images/common/icon-paddle-white.svg" alt="패들보드">
+						<span>패들보드</span>
+					</li>
+					<li class="slide-nav__tab">
+						<img src="images/common/icon-ski-white.svg" alt="수상스키">
+						<span>수상스키</span>
+					</li>
+					<li class="slide-nav__tab">
+						<img src="images/common/icon-safety-white.svg" alt="안전용품">
+						<span>안전용품</span>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 </body>
 	<script type="text/javascript" src="javascripts/common.js"></script>
 	<script type="text/javascript" src="javascripts/index.js"></script>
